--- a/style.css
+++ b/style.css
@@ -211,3 +211,40 @@
     margin-bottom: 40px;
     
 }
+.early-access-section {
+    background-color: rgba(251, 251, 251, 1);
+    border-radius: 12px;
+    padding: 80px 40px;
+       
+}
+.early-access-section h2 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    margin-bottom: 16px;
+    color: #001931;
+}
+.early-access-section p {
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 24px;
+    color: #627382;
+}
+.early-access-section .early-btn{
+    background-color: #30B868;
+    color: rgba(255, 255, 255, 1);
+    font-weight: 600;
+    line-height: 19px;
+    border-radius: 4px;
+    padding: 12px 16px;
+    border: none;
+    margin-bottom: 16px;
+
+}
+.early-access-section .list-1 {
+    list-style-type: none;
+}
+.early-access-section ul {
+    display: flex;
+    gap: 30px;
+}
