updated hover effect on button

--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@
     display: flex;
     gap: 16px;
     align-items: center;
+    cursor: pointer;
+}
+.hero-btn:hover {
+  background: #c29e0c;
 }
 .hero-btn .hero-btn-one {
     background-color: #30B868;
@@ -105,14 +109,23 @@
     border-radius: 4px;
     border: none;
     padding: 12px 16px;
+    cursor: pointer;
 }
+.hero-btn .hero-btn-one:hover {
+  background: #c29e0c;
+}
+
 .hero-btn .hero-btn-two {
     border: 1px solid rgba(255, 255, 255, 1);
     color: rgba(255, 255, 255, 1);
     border-radius: 4px;
     padding: 12px 16px;
     background-color: transparent;
+    cursor: pointer;
 
+}
+.hero-btn .hero-btn-two:hover {
+  background: #c29e0c;
 }
 .note-heading h2 {
     font-size: 48px;
@@ -246,6 +259,9 @@
     border: none;
     margin-bottom: 16px;
 
+}
+.early-access-section .early-btn:hover {
+  background: #c29e0c;
 }
 .early-access-section .list-1 {
     list-style-type: none;
