--- a/style.css
+++ b/style.css
@@ -270,3 +270,38 @@
     display: flex;
     gap: 30px;
 }
+.footer-section{
+    display: flex;
+    justify-content: space-between;
+
+}
+.footer-section .social img {
+    width: 20px;
+    height: 20px;
+    gap: 16px;
+    margin-bottom: 110px;
+    align-items: center;
+}
+footer {
+    background-color: #001931;
+    padding: 120px 120px 30px 120px;
+}
+.footer-section .social p {
+    color: rgba(255, 255, 255, 1);
+    font-size: 20px;
+    font-weight: 500px;
+    line-height: 28px;
+    margin-bottom: 16px;
+
+}
+footer br {
+    border: 1px solid #E5E7EB;
+}
+footer .copy-right {
+    color: rgba(250, 250, 250, 1);
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
